# INF221-Project

./: .gitignore  CHANGELOG.md  INF221-Project.cabal  INF221.cabal  README.md  package.yaml  stack.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
report/: main.tex  refs.bib
src/: EBNF.hs  SemanticModel.hs  output.hs
src/EBNF/: CheckGrammar.hs  EBNF.hs  Lexer.hs  Parser.hs  REGEX.hs
src/Generator/: GenParser.hs  GenTree.hs  GenUtils.hs  ParseTree.hs
src/evaluator/: SemanticModel.hs  SymbolTable.hs
src/test/: ParserTest.hs
src/test/examples/: ebnf  ex2  ex4  ex5
test/: GeneratorTest.hs  ParserTest.hs
test/examples/: ebnf  ex1  ex3  ex4  ex5
test/testGrammars/: ebnf.e2bnf
